feat: add RideSeekerBacklogEntry entity and repository, implement geofence service for USIU campus